[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.18.2"

[dev-dependencies]
solana-program-test = "1.18.2"
solana-sdk = "1.18.2"

[lib]
crate-type = ["cdylib", "lib"]